fix(css-components): Fixed broken switch z-index.

--- a/css-components/src/components/switch.css
+++ b/css-components/src/components/switch.css
@@ -64,6 +64,7 @@
 
 .switch__input {
   @apply(--hide-input);
+  z-index: 0;
 }
 
 /* switch toggle background */
@@ -201,7 +202,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  z-index: -1;
+  z-index: 0;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.12);
   transition: box-shadow 0.1s linear;
 }
